--- a/scroll_horizontal.html
+++ b/scroll_horizontal.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style_horizontal.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="js/jquery.mousewheel.min.js"></script>
-    <script src="js/script_horizontal.js"></script>
+    <script src="js/final_horizontal.js"></script>
 </head>
 <body>
     <div id="wrap">
