--- a/scroll_vertical.html
+++ b/scroll_vertical.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="js/jquery.mousewheel.min.js"></script>
-    <script src="js/script_vertical.js"></script>
+    <script src="js/final_vertical.js"></script>
 </head>
 <body>
     <div id="wrap">
