--- a/scroll_vertical.html
+++ b/scroll_vertical.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="js/final_vertical.js"></script>
 </head>
 <body>
     <div id="wrap">
@@ -23,5 +22,6 @@
             <a href="#no4">no4</a>
         </div>
     </div>
+    <script src="js/closure.js"></script>
 </body>
 </html>
